--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       rel="stylesheet"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Tushar Gadher - Developer</title>
+    <title>Tushar Gadher | PortFolio</title>
   </head>
   <body>
     <div class="preloader">
