Added Sending Message Functionality

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="./favicon.ico" />
+    <link rel="icon" type="image/svg+xml" href="./public/favicon.png" />
     <link rel="stylesheet" href="/src/index.css" />
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <link rel="stylesheet" href="https://unpkg.com/kursor/dist/kursor.css" />
@@ -11,12 +11,12 @@
       rel="stylesheet"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Tushar Gadher | PortFolio</title>
+    <title>Tushar Gadher </title>
   </head>
   <body>
     <div class="preloader">
       <span class="innerBox">
-        <span>Preparing content for Display</span>
+        <span>Loading Content...</span>
         <section class="dots-container">
           <div class="dot"></div>
           <div class="dot"></div>
